2008-10-30  Cameron Zwarich  <zwarich@apple.com>

Reviewed by Sam Weinig.

        Bug 21985: Opcodes should use eax as their destination register whenever possible
        <https://bugs.webkit.org/show_bug.cgi?id=21985>

        Change more opcodes to use eax as the register for their final result,
        and change calls to emitPutResult() that pass eax to rely on the default
        value of eax.

        * VM/CTI.cpp:
        (JSC::CTI::privateCompileMainPass):


Canonical link: https://commits.webkit.org/30227@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@38009 268f45cc-cd09-0410-ab3c-d52691b4dbfc